Centered progressbar popup properly, and set line-height, was not displaying correctly in fullscreen. Fixed line-height for course presentation, had been altered by core, did not look good on old content. Removed font size for ct, link, a-t, they were set twice, making their font size too small. [HFJ-617]

--- a/styles/cp.css
+++ b/styles/cp.css
@@ -40,6 +40,7 @@
 .h5p-course-presentation {
   font-family: H5PDroidSans, sans-serif;
   color: #323232;
+  line-height: 1em;
 }
 
 .h5p-course-presentation h2 {
@@ -328,8 +329,6 @@
   background: #0580e2;
   opacity: 0.4;
 }
-
-
 
 .h5p-course-presentation .h5p-popup-overlay,
 .h5p-course-presentation .h5p-popup-overlay.h5p-video {
@@ -625,7 +624,6 @@ border-collapse: collapse;
 .h5p-course-presentation .h5p-element .h5p-element-inner.h5p-advanced-text,
 .h5p-course-presentation .h5p-element .h5p-element-inner.h5p-link,
 .h5p-course-presentation .h5p-element .h5p-element-inner.h5p-ct {
-  font-size: 0.75em;
   padding: 0.375em 0.5em;
 }
 .h5p-course-presentation .h5p-element.h5p-transparent .h5p-element-inner.h5p-advanced-text,
